syntax = "proto3";

package dataplane;

import "cloud/disk_manager/internal/pkg/types/types.proto";

option go_package = "a.yandex-team.ru/cloud/disk_manager/internal/pkg/dataplane/protos";

////////////////////////////////////////////////////////////////////////////////

message TransferFromSnapshotToDiskRequest {
    string SrcSnapshotId = 1;
    types.Disk DstDisk = 2;
}

message TransferFromSnapshotToDiskTaskState {
    TransferFromSnapshotToDiskRequest Request = 1;
    uint32 MilestoneChunkIndex = 2;
    double Progress = 4;
    uint32 ChunkCount = 3;
}

message TransferFromSnapshotToDiskMetadata {
    double Progress = 1;
}
