syntax = "proto3";

package transfer;

import "cloud/disk_manager/internal/pkg/types/types.proto";

option go_package = "a.yandex-team.ru/cloud/disk_manager/internal/pkg/services/transfer/protos";

////////////////////////////////////////////////////////////////////////////////

message TransferFromSnapshotToDiskRequest {
    string SrcSnapshotId = 1;
    types.Disk Dst = 2;
    string OperationCloudId = 3;
    string OperationFolderId = 4;
}

message TransferFromSnapshotToDiskTaskState {
    TransferFromSnapshotToDiskRequest Request = 1;
    int64 Offset = 2;
    double Progress = 3;
}

message TransferFromSnapshotToDiskMetadata {
    double Progress = 1;
}
